Implemented BottomNavigationView with Navigation Component

--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -9,7 +9,7 @@
         android:id="@+id/openB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Open B"
+        android:text="@string/open_b"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
