--- a/app/src/main/res/navigation/nav_ui_graph.xml
+++ b/app/src/main/res/navigation/nav_ui_graph.xml
@@ -8,16 +8,16 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.kakyiretechnologies.navigationcomponent.navigationui.HomeFragment"
-        android:label="HomeFragment"
+        android:label="Home"
         tools:layout="@layout/home_fragment" />
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.kakyiretechnologies.navigationcomponent.navigationui.ChatFragment"
-        android:label="ChatFragment"
+        android:label="Chat"
         tools:layout="@layout/chat_fragment" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.kakyiretechnologies.navigationcomponent.navigationui.ProfileFragment"
-        android:label="ProfileFragment"
+        android:label="Profile"
         tools:layout="@layout/profile_fragment" />
 </navigation>
